fix: add overflow hidden to extra small icon button styles

--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -99,6 +99,7 @@
 
   .app-c-btn-icon-xs {
     height: var(--form-item-height-xs);
+    overflow: hidden;
     border-radius: var(--radius-sm);
   }
 
